# vartovsk_flask_release

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT.md  ICAO.csv  README.md  aero_data.py  aero_index.json  cache_manager.py  config.py  constants.py  gunicorn_config.py  history_storage.py  logger_config.py  metar_decoder.py  metar_history.db  metar_web_app.py  ogimet_parser.py  pyproject.toml  taf_decoder.py  validators.py  visit_tracker.py  visits.db
static/css/: style.css
static/js/: aero.js  archive.js  script.js
static/templates/: aero.html  archive.html  index.html
templates/: aero.html  archive.html  base.html  index.html  stats.html
