[project]
name = "vartovsk_flask-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "matplotlib>=3.10.6",
    "metpy>=1.7.1",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "redis>=6.4.0",
    "python-dotenv>=1.1.1",
    "flask>=3.1.2",
]
