[project]
name = "vartovsk_flask-release"
version = "0.1.0"
description = "METAR/TAF decoder — Meteostart.ru"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "metpy>=1.7.1",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
